@@ -114,13 +114,18 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M5</version>
+                <version>3.0.0-M7</version>
                 <configuration>
-                    <forkCount>0</forkCount>
-                    <argLine>
-                        --add-modules ALL-SYSTEM
-                        --illegal-access=permit
-                    </argLine>
+                    <skipTests>false</skipTests>
+                    <useModulePath>false</useModulePath>
+                    <useFile>false</useFile>
+                    <parallel>methods</parallel>
+                    <threadCount>10</threadCount>
+                    <testFailureIgnore>true</testFailureIgnore>
+                    <useSystemClassLoader>false</useSystemClassLoader>
+<!--                    <argLine>-->
+<!--                        &#45;&#45;add-modules ALL-SYSTEM &#45;&#45;illegal-access=permit-->
+<!--                    </argLine>-->
                 </configuration>
             </plugin>
             <plugin>
@@ -161,23 +166,61 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>cobertura-maven-plugin</artifactId>
-                <version>2.7</version>
-                <configuration>
-                    <formats>
-                        <format>xml</format>
-                        <format>html</format>
-                    </formats>
-                    <reportSets>
-                        <reportSet>
-                            <reports>
-                                <report>cobertura</report>
-                            </reports>
-                        </reportSet>
-                    </reportSets>
-                </configuration>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.7</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <!-- attached to Maven test phase -->
+                    <execution>
+                        <id>report</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                    <!-- prepare agent for measuring integration tests -->
+                    <execution>
+                        <id>prepare-integration-tests</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                        <phase>pre-integration-test</phase>
+                        <configuration>
+                            <propertyName>itCoverageAgent</propertyName>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>jacoco-site</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
+            <!--            <plugin>-->
+            <!--                <groupId>org.codehaus.mojo</groupId>-->
+            <!--                <artifactId>cobertura-maven-plugin</artifactId>-->
+            <!--                <version>2.7</version>-->
+            <!--                <configuration>-->
+            <!--                    <formats>-->
+            <!--                        <format>xml</format>-->
+            <!--                        <format>html</format>-->
+            <!--                    </formats>-->
+            <!--                    <reportSets>-->
+            <!--                        <reportSet>-->
+            <!--                            <reports>-->
+            <!--                                <report>cobertura</report>-->
+            <!--                            </reports>-->
+            <!--                        </reportSet>-->
+            <!--                    </reportSets>-->
+            <!--                </configuration>-->
+            <!--            </plugin>-->
             <!--
        <plugin>
            <groupId>org.eluder.coveralls</groupId>
@@ -191,24 +234,24 @@
             -->
 
 
-                 <!--
-            <plugin>
-                <groupId>org.codehaus.gmaven</groupId>
-                <artifactId>groovy-maven-plugin</artifactId>
-                <version>2.1.1</version>
-                <executions>
-                    <execution>
-                        <phase>post-integration-test</phase>
-                        <goals>
-                            <goal>execute</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <source>src/get-cober.groovy</source>
-                </configuration>
-            </plugin>
-                 -->
+            <!--
+       <plugin>
+           <groupId>org.codehaus.gmaven</groupId>
+           <artifactId>groovy-maven-plugin</artifactId>
+           <version>2.1.1</version>
+           <executions>
+               <execution>
+                   <phase>post-integration-test</phase>
+                   <goals>
+                       <goal>execute</goal>
+                   </goals>
+               </execution>
+           </executions>
+           <configuration>
+               <source>src/get-cober.groovy</source>
+           </configuration>
+       </plugin>
+            -->
         </plugins>
 
     </build>
